--- a/configure.in
+++ b/configure.in
@@ -40,6 +40,25 @@ case "$host" in
 esac
 AM_CONDITIONAL(PLATFORM_WIN32, test x$platform_win32 = xyes)
 
+AC_ARG_ENABLE([epoll],
+	      AC_HELP_STRING([--disable-epoll],
+			     [Disable epoll]),
+	      [enable_epoll=$enableval],
+	      [enable_epoll="yes"])
+AM_CONDITIONAL(MYCPP_ENABLE_EPOLL, test "x$enable_epoll" = "xyes")
+if test "x$enable_epoll" = "xyes"; then
+    AC_DEFINE([MYCPP_ENABLE_EPOLL], [1], [ ])
+fi
+
+AC_ARG_WITH([select],
+	    AC_HELP_STRING([--with-select=@<:@yes/no@:>@],
+			   [Use select() syscall for event polling by default [default=no]]),
+	    [with_select=$withval],
+	    [with_select="no"])
+if test "x$with_select" = "xyes"; then
+    AC_DEFINE([MYCPP_USE_SELECT], [1], [ ])
+fi
+
 #AC_CONFIG_HEADERS([config.h mycpp/mycpp_config.h config.h])
 AC_CONFIG_HEADERS([config.h mycpp/mycpp_config.h])
 
