--- a/configure.in
+++ b/configure.in
@@ -30,21 +30,34 @@ AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 #LT_INIT(win32-dll)
 
+echo "HOST: $host"
 case "$host" in
+  *-*-cygwin*)
+    platform_cygwin=yes
+    platform_default=no
+    ;;
   *-*-mingw*|*-*-cygwin*)
     platform_win32=yes
+    platform_default=no
     ;;
   *)
     platform_win32=no
+    platform_cygwin=no
+    platform_default=yes
     ;;
 esac
-AM_CONDITIONAL(PLATFORM_WIN32, test x$platform_win32 = xyes)
+AM_CONDITIONAL(PLATFORM_CYGWIN,  test x$platform_cygwin  = xyes)
+AM_CONDITIONAL(PLATFORM_WIN32,   test x$platform_win32   = xyes)
+AM_CONDITIONAL(PLATFORM_DEFAULT, test x$platform_default = xyes)
 
 AC_ARG_ENABLE([epoll],
 	      AC_HELP_STRING([--disable-epoll],
 			     [Disable epoll]),
 	      [enable_epoll=$enableval],
 	      [enable_epoll="yes"])
+if test "x$platform_default" = "xno"; then
+    enable_epoll=no
+fi
 AM_CONDITIONAL(MYCPP_ENABLE_EPOLL, test "x$enable_epoll" = "xyes")
 if test "x$enable_epoll" = "xyes"; then
     AC_DEFINE([MYCPP_ENABLE_EPOLL], [1], [ ])
