minor switch/case fix

--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,7 @@ case "$host" in
     platform_cygwin=yes
     platform_default=no
     ;;
-  *-*-mingw*|*-*-cygwin*)
+  *-*-mingw*)
     platform_win32=yes
     platform_default=no
     ;;
