--- a/configure.in
+++ b/configure.in
@@ -30,6 +30,8 @@ AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 #LT_INIT(win32-dll)
 
+AC_LANG_CPLUSPLUS
+
 echo "HOST: $host"
 case "$host" in
   *-*-cygwin*)
@@ -71,6 +73,40 @@ AC_ARG_WITH([select],
 if test "x$with_select" = "xyes"; then
     AC_DEFINE([MYCPP_USE_SELECT], [1], [ ])
 fi
+
+
+tmp_cxxflags="$CXXFLAGS"
+
+CXXFLAGS="$CXXFLAGS -Wextra"
+AC_MSG_CHECKING([whether CXX supports -Wextra])
+AC_COMPILE_IFELSE(
+    [AC_LANG_PROGRAM([])],
+    [AC_MSG_RESULT([yes])]
+        [AM_CFLAGS="$AM_CFLAGS -Wextra"]
+        [AM_CXXFLAGS="$AM_CXXFLAGS -Wextra"],
+    [AC_MSG_RESULT([no])]
+        [AM_CFLAGS="$AM_CFLAGS"]
+        [AM_CXXFLAGS="$AM_CXXFLAGS"])
+
+CXXFLAGS="$tmp_cxxflags -std=gnu++11"
+AC_MSG_CHECKING([whether CXX supports -std=gnu++11])
+AC_COMPILE_IFELSE(
+    [AC_LANG_PROGRAM([])],
+    [AC_MSG_RESULT([yes])]
+        [AM_CXXFLAGS="$AM_CXXFLAGS -std=gnu++11"],
+    [AC_MSG_RESULT([no])]
+        AC_MSG_CHECKING([whether CXX supports -std=c++11])
+        CXXFLAGS="$tmp_cxxflags -std=c++11"
+        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
+                          [AC_MSG_RESULT([yes])]
+                              [AM_CXXFLAGS="$AM_CFLAGS -std=c++11"],
+                          [AC_MSG_RESULT([no])]
+                              [AM_CXXFLAGS="$AM_CFLAGS -std=gnu++0x"]))
+
+CXXFLAGS="$tmp_cxxflags"
+AC_SUBST([AM_CFLAGS])
+AC_SUBST([AM_CXXFLAGS])
+
 
 #AC_CONFIG_HEADERS([config.h mycpp/mycpp_config.h config.h])
 AC_CONFIG_HEADERS([config.h mycpp/mycpp_config.h])
